Avoid showing duplicate scrollbars on books panel
On some browsers (Safari?) a second horizontal scrollbar was appearing.

--- a/src/scss/phy/homepage.scss
+++ b/src/scss/phy/homepage.scss
@@ -207,8 +207,7 @@ $dashboard-panel-padding: 30px;
 }
 
 .book-panel {
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: hidden;
 
   .dashboard-book {
     font-size: 13px;
